--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                 <li>
                     <a href="./pages/menu.html">Menú +</a>
                     <ul>
-                        <li><a href="./pages/menu.html">Entradas</a></li>
-                        <li><a href="./pages/menu.html">Principales</a></li>
-                        <li><a href="./pages/menu.html">Postres</a></li>
-                        <li><a href="./pages/menu.html">Vinos</a></li>
+                        <li><a href="./pages/menu.html#entradas">Entradas</a></li>
+                        <li><a href="./pages/menu.html#principales">Principales</a></li>
+                        <li><a href="./pages/menu.html#postres">Postres</a></li>
+                        <li><a href="./pages/menu.html#vinos">Vinos</a></li>
                     </ul>
                 </li>
                 <li><a href="./pages/eventos.html">Eventos</a></li>
@@ -82,13 +82,14 @@
             <p>Copyright La Parrilla del Abuelo - 2023.Todos los derechos reservados.</p>
         </div>
         <div class="redes">
-            <i class="fa-brands fa-whatsapp"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-youtube"></i>
-            <i class="fa-brands fa-twitter"></i>
+            <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a>
+            <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://es-la.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i></a>
+            <a href="https://twitter.com/?lang=es"><i class="fa-brands fa-twitter"></i></a>
         </div>
     </footer>
+    
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
