--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -25,10 +25,10 @@
                 <li>
                     <a href="./menu.html">Menú +</a>
                     <ul>
-                        <li><a href="./menu.html">Entradas</a></li>
-                        <li><a href="./menu.html">Principales</a></li>
-                        <li><a href="./menu.html">Postres</a></li>
-                        <li><a href="./menu.html">Vinos</a></li>
+                        <li><a href="./menu.html#entradas">Entradas</a></li>
+                        <li><a href="./menu.html#principales">Principales</a></li>
+                        <li><a href="./menu.html#postres">Postres</a></li>
+                        <li><a href="./menu.html#vinos">Vinos</a></li>
                     </ul>
                 </li>
                 <li><a href="./eventos.html">Eventos</a></li>
@@ -39,7 +39,7 @@
     </nav>
 
     <header class="headerContacto">
-        <h1>CONTACTO</h1>
+        <h1>Contacto</h1>
         <p>Tu comentario nos ayuda a mejorar y seguir creciendo</p>
     </header>
 
@@ -67,17 +67,25 @@
             <input type="submit" class="boton" value="Enviar consulta">
         </form>
     </main>
+
+    <aside>
+        <section>
+            <div class="mapa">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.0888516834216!2d-58.383029684530605!3d-34.601914664910275!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccac8d143dc11%3A0xc969d8120bd541bf!2sCarlos%20Pellegrini%20551%2C%20C1009ABK%20CABA!5e0!3m2!1ses-419!2sar!4v1673035727335!5m2!1ses-419!2sar" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </section>
+    </aside>
     
     <footer>
         <div class="pie">
             <p>Copyright La Parrilla del Abuelo - 2023.Todos los derechos reservados.</p>
         </div>
         <div class="redes">
-            <i class="fa-brands fa-whatsapp"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-youtube"></i>
-            <i class="fa-brands fa-twitter"></i>
+            <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a>
+            <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://es-la.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i></a>
+            <a href="https://twitter.com/?lang=es"><i class="fa-brands fa-twitter"></i></a>
         </div>
     </footer>
     
