--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Los eventos de la parrilla</title>
+    <link rel="shortcut icon" href="../assets/img/logo1.png" type="image/x-icon">
+    <title>El menú de la parrilla</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" href="../assets/css/style.css">
 </head>
@@ -24,10 +25,10 @@
                 <li>
                     <a href="./menu.html">Menú +</a>
                     <ul>
-                        <li><a href="./menu.html">Entradas</a></li>
-                        <li><a href="./menu.html">Principales</a></li>
-                        <li><a href="./menu.html">Postres</a></li>
-                        <li><a href="./menu.html">Vinos</a></li>
+                        <li><a href="./menu.html#entradas">Entradas</a></li>
+                        <li><a href="./menu.html#principales">Principales</a></li>
+                        <li><a href="./menu.html#postres">Postres</a></li>
+                        <li><a href="./menu.html#vinos">Vinos</a></li>
                     </ul>
                 </li>
                 <li><a href="./eventos.html">Eventos</a></li>
@@ -36,3 +37,58 @@
             </ul>
     </section>
     </nav>
+
+    <header class="headerEventos">
+        <h1>Eventos</h1>
+        <p>Te acompañamos en esos momentos especiales</p>
+        <a class="btn" href="../pages/reserva.html">RESERVAR</a>
+    </header>
+
+    <main class="mainEventos">
+        <section class="contenedor">
+            <div class="card">
+                <div class="texto">
+                    <h2>Cumpleaños</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis culpa fugiat cumque, numquam aliquam, qui possimus omnis delectus inventore sunt, doloremque quia totam hic officia ducimus repellendus dicta! Laborum, veritatis?</p>
+                </div>
+                <div class="imagen">
+                    <img src="../assets/img/cumpleaños.jpg" alt="cumpleaños">
+                </div>
+            </div>
+            <div class="card">
+                <div class="texto">
+                    <h2>Casamientos</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis culpa fugiat cumque, numquam aliquam, qui possimus omnis delectus inventore sunt, doloremque quia totam hic officia ducimus repellendus dicta! Laborum, veritatis?</p>
+                </div>
+                <div class="imagen">
+                    <img src="../assets/img/catering-casamiento.jpg" alt="catering-casamiento">
+                </div>
+            </div>
+            <div class="card">
+                <div class="texto">
+                    <h2>Eventos corporativos</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis culpa fugiat cumque, numquam aliquam, qui possimus omnis delectus inventore sunt, doloremque quia totam hic officia ducimus repellendus dicta! Laborum, veritatis?</p>
+                </div>
+                <div class="imagen">
+                    <img src="../assets/img/evento-corporativo.jpg" alt="evento-corporativo">
+                </div>
+            </div>
+            
+        </section>
+    </main>
+
+    <footer>
+        <div class="pie">
+            <p>Copyright La Parrilla del Abuelo - 2023.Todos los derechos reservados.</p>
+        </div>
+        <div class="redes">
+            <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a>
+            <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://es-la.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i></a>
+            <a href="https://twitter.com/?lang=es"><i class="fa-brands fa-twitter"></i></a>
+        </div>
+    </footer>
+
+</body>
+</html>
