--- a/pages/menu.html
+++ b/pages/menu.html
@@ -25,10 +25,10 @@
                 <li>
                     <a href="./menu.html">Menú +</a>
                     <ul>
-                        <li><a href="./menu.html">Entradas</a></li>
-                        <li><a href="./menu.html">Principales</a></li>
-                        <li><a href="./menu.html">Postres</a></li>
-                        <li><a href="./menu.html">Vinos</a></li>
+                        <li><a href="./menu.html#entradas">Entradas</a></li>
+                        <li><a href="./menu.html#principales">Principales</a></li>
+                        <li><a href="./menu.html#postres">Postres</a></li>
+                        <li><a href="./menu.html#vinos">Vinos</a></li>
                     </ul>
                 </li>
                 <li><a href="./eventos.html">Eventos</a></li>
@@ -44,22 +44,22 @@
     </header>
     
     <main class="mainMenu">
-        <h3>Entradas</h3>
+        <h3 id="entradas">Entradas</h3>
         <section class="tarjetas">
             <div class="tarjeta">
                 <img src="../assets/img/empanada.jpg" alt="empanada">
                 <p>Empanadas de carne</p>
-                <a href="">¡QUIERO!</a>
+                <a href="./reserva.html">¡QUIERO!</a>
             </div>
             <div class="tarjeta">
                 <img src="../assets/img/empanada-p.jpg" alt="Empanada-p">
                 <p>Empanadas de pollo</p>
-                <a href="">¡QUIERO!</a>
+                <a href="./reserva.html">¡QUIERO!</a>
             </div>
             <div class="tarjeta">
                 <img src="../assets/img/empanada-jyq.jpg" alt="Empanada-jyq">
                 <p>Empanadas de jamón y queso</p>
-                <a href="">¡QUIERO!</a>
+                <a href="./reserva.html">¡QUIERO!</a>
             </div>
             <div class="tarjeta">
                 <img src="../assets/img/palitos-queso.jpg" alt="palito-queso">
@@ -69,119 +69,157 @@
             <div class="tarjeta">
                 <img src="../assets/img/morcilla.jpg" alt="morcilla">
                 <p>Morcilla</p>
-                <a href="">¡QUIERO!</a>
+                <a href="./reserva.html">¡QUIERO!</a>
             </div>
             <div class="tarjeta">
                 <img src="../assets/img/chorizo.jpg" alt="chorizo">
                 <p>Chorizo</p>
-                <a href="">¡QUIERO!</a>
+                <a href="./reserva.html">¡QUIERO!</a>
             </div>
             <div class="tarjeta">
                 <img src="../assets/img/mollejas.jpg" alt="mollejas">
                 <p>Mollejas</p>
-                <a href="">¡QUIERO!</a>
+                <a href="./reserva.html">¡QUIERO!</a>
             </div>
             <div class="tarjeta">
                 <img src="../assets/img/chinchulines.jpg" alt="chinchulines">
                 <p>Chinchulines</p>
-                <a href="">¡QUIERO!</a>
+                <a href="./reserva.html">¡QUIERO!</a>
             </div>
         </section>
 
-        <h3>Platos Principales</h3>
+        <h3 id="principales">Platos Principales</h3>
         <section class="tarjetas">
             <div class="tarjeta">
                 <img src="../assets/img/parrillada.jpg" alt="parrillada">
                 <p>Parrillada para compartir con guarnición</p>
-                <a href="">¡QUIERO!</a>
+                <a href="./reserva.html">¡QUIERO!</a>
             </div>
             <div class="tarjeta">
                 <img src="../assets/img/tira-de-asado.jpg" alt="tira-de-asado">
                 <p>Tira de asado con guarnición</p>
-                <a href="">¡QUIERO!</a>
+                <a href="./reserva.html">¡QUIERO!</a>
             </div>
             <div class="tarjeta">
                 <img src="../assets/img/bife-chorizo.jpg" alt="bife-chorizo">
                 <p>Bife de chorizo con guarnición</p>
-                <a href="">¡QUIERO!</a>
+                <a href="./reserva.html">¡QUIERO!</a>
             </div>
             <div class="tarjeta">
                 <img src="../assets/img/vacio.jpg" alt="vacio">
                 <p>Vacio con guarnición</p>
-                <a href="">¡QUIERO!</a>
+                <a href="./reserva.html">¡QUIERO!</a>
             </div>
             <div class="tarjeta">
                 <img src="../assets/img/cordero-trozos.jpg" alt="cordero">
                 <p>Trozos de filet de cordero con guarnición</p>
-                <a href="">¡QUIERO!</a>
+                <a href="./reserva.html">¡QUIERO!</a>
             </div>
             <div class="tarjeta">
                 <img src="../assets/img/brochetas.jpg" alt="brochetas">
                 <p>Brochetas de ternera con tomate</p>
-                <a href="">¡QUIERO!</a>
+                <a href="./reserva.html">¡QUIERO!</a>
             </div>
             <div class="tarjeta">
                 <img src="../assets/img/brochetas-pollo.jpg" alt="brochetas-pollo">
                 <p>Brochetas de pollo con pimentos</p>
-                <a href="">¡QUIERO!</a>
+                <a href="./reserva.html">¡QUIERO!</a>
             </div>
             <div class="tarjeta">
                 <img src="../assets/img/pollo.jpg" alt="pollo">
                 <p>Pollo asado con guarnición</p>
-                <a href="">¡QUIERO!</a>
+                <a href="./reserva.html">¡QUIERO!</a>
             </div>
             <div class="tarjeta">
                 <img src="../assets/img/chuleta-cerdo.jpg" alt="chuleta-cerdo">
                 <p>Chuletas de cerdo con guarnición</p>
-                <a href="">¡QUIERO!</a>
+                <a href="./reserva.html">¡QUIERO!</a>
             </div>
             <div class="tarjeta">
                 <img src="../assets/img/hamburguesa-pollo.jpg" alt="hamburguesa-pollo">
                 <p>Hamburguesa de pollo con guarnición</p>
-                <a href="">¡QUIERO!</a>
+                <a href="./reserva.html">¡QUIERO!</a>
             </div>
             <div class="tarjeta">
                 <img src="../assets/img/hamburguesa.jpg" alt="hamburguesa-queso">
                 <p>Hamburguesa doble con queso con guarnición</p>
-                <a href="">¡QUIERO!</a>
+                <a href="./reserva.html">¡QUIERO!</a>
             </div>
             <div class="tarjeta">
                 <img src="../assets/img/hamburguesa-lechuga-tomate.jpg" alt="hamburguesa-lechuga-tomate">
                 <p>Hamburguesa simple de lechuga y tomate con guarnición</p>
-                <a href="">¡QUIERO!</a>
+                <a href="./reserva.html">¡QUIERO!</a>
             </div>
         </section>
-        <h3>Postres</h3>
+        <h3 id="postres">Postres</h3>
         <section class="tarjetas">
             <div class="tarjeta">
                 <img src="../assets/img/torta-ciruela-frambuesa.jpg" alt="torta-ciruela-frambuesa">
                 <p>Torta de ciruela y frambuesa</p>
-                <a href="">¡QUIERO!</a>
+                <a href="./reserva.html">¡QUIERO!</a>
             </div>
             <div class="tarjeta">
                 <img src="../assets/img/tarta-queso-gelatina.jpg" alt="tarta-queso-gelatina">
                 <p>Tarta de queso con gelatina de cereza</p>
-                <a href="">¡QUIERO!</a>
+                <a href="./reserva.html">¡QUIERO!</a>
             </div>
             <div class="tarjeta">
                 <img src="../assets/img/brownie.jpg" alt="brownie">
                 <p>Brownie de chocolate</p>
-                <a href="">¡QUIERO!</a>
+                <a href="./reserva.html">¡QUIERO!</a>
             </div>
             <div class="tarjeta">
                 <img src="../assets/img/mousse-chocolate.jpg" alt="mousse-chocolate">
                 <p>Mousse de chocolate</p>
-                <a href="">¡QUIERO!</a>
+                <a href="./reserva.html">¡QUIERO!</a>
             </div>            
             <div class="tarjeta">
                 <img src="../assets/img/panqueque-frutillas.jpg" alt="panqueque-frutillas">
                 <p>Panqueque con frutilla y chocolate</p>
-                <a href="">¡QUIERO!</a>
+                <a href="./reserva.html">¡QUIERO!</a>
             </div>            
             <div class="tarjeta">
                 <img src="../assets/img/flan.jpg" alt="flan">
                 <p>Flan con dulce de leche</p>
-                <a href="">¡QUIERO!</a>
+                <a href="./reserva.html">¡QUIERO!</a>
+            </div>
+            <div class="tarjeta">
+                <img src="../assets/img/helado.jpg" alt="helado">
+                <p>Bocha de helado</p>
+                <a href="./reserva.html">¡QUIERO!</a>
+            </div>
+        </section>
+        <h3 id="vinos">Vinos</h3>
+        <section class="tarjetas">
+            <div class="tarjeta">
+                <img class="vino" src="../assets/img/vino-cordero-con-piel.jpg" alt="vino-cordero-con-piel">
+                <p>Cordero Piel Lobo Malbec</p>
+                <a href="./reserva.html">¡QUIERO!</a>
+            </div>
+            <div class="tarjeta">
+                <img class="vino" src="../assets/img/vino-catena.jpg" alt="vino-catena">
+                <p>D.V. Catena Cabernet M.</p>
+                <a href="./reserva.html">¡QUIERO!</a>
+            </div>
+            <div class="tarjeta">
+                <img class="vino" src="../assets/img/vino-perro-callejero.jpg" alt="vino-perro-callejero">
+                <p>Perro Callejero Blend M.</p>
+                <a href="./reserva.html">¡QUIERO!</a>
+            </div>
+            <div class="tarjeta">
+                <img class="vino" src="../assets/img/vino-cordero-con-piel.jpg" alt="vino-cordero-con-piel">
+                <p>Cordero Piel Lobo Malbec</p>
+                <a href="./reserva.html">¡QUIERO!</a>
+            </div>
+            <div class="tarjeta">
+                <img class="vino" src="../assets/img/vino-sapo-otro-pozo.jpg" alt="vino-sapo-otro-pozo">
+                <p>Sapo de Otro Pozo Blend</p>
+                <a href="./reserva.html">¡QUIERO!</a>
+            </div>
+            <div class="tarjeta">
+                <img class="vino" src="../assets/img/vino-mosquita-muerta.jpg" alt="vino-mosquita-muerta">
+                <p>Mosquita Muerta Blend</p>
+                <a href="./reserva.html">¡QUIERO!</a>
             </div>
         </section>
 
@@ -192,11 +230,11 @@
             <p>Copyright La Parrilla del Abuelo - 2023.Todos los derechos reservados.</p>
         </div>
         <div class="redes">
-            <i class="fa-brands fa-whatsapp"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-youtube"></i>
-            <i class="fa-brands fa-twitter"></i>
+            <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a>
+            <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://es-la.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i></a>
+            <a href="https://twitter.com/?lang=es"><i class="fa-brands fa-twitter"></i></a>
         </div>
     </footer>
 
