--- a/pages/reserva.html
+++ b/pages/reserva.html
@@ -4,10 +4,103 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reserva</title>
+    <link rel="shortcut icon" href="../assets/img/logo1.png" type="image/x-icon">
+    <title>El menú de la parrilla</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" href="../assets/css/style.css">
 </head>
+
 <body>
+    <nav class="navegador">
+        <div class="logo">
+            <a href="../index.html"><img src="../assets/img/logo2.png" alt="logo"></a>
+        </div>
+        <label for="check" class="checkbtn">
+            <i class="fa-solid fa-bars"></i>
+        </label>
+        <input type="checkbox" id="check">
+        <section class="navbar">
+            <ul>
+                <li><a href="../index.html">Nuestra Historia</a></li>
+                <li>
+                    <a href="./menu.html">Menú +</a>
+                    <ul>
+                        <li><a href="./menu.html#entradas">Entradas</a></li>
+                        <li><a href="./menu.html#principales">Principales</a></li>
+                        <li><a href="./menu.html#postres">Postres</a></li>
+                        <li><a href="./menu.html#vinos">Vinos</a></li>
+                    </ul>
+                </li>
+                <li><a href="./eventos.html">Eventos</a></li>
+                <li><a href="./reserva.html">Reserva</a></li>
+                <li><a href="./contacto.html">Contacto</a></li>
+            </ul>
+    </section>
+    </nav>
+
+    <header class="headerReserva">
+        <h1>Reserva</h1>
+        <p>Vení a vivir una experiencia única</p>
+    </header>
+
+    <main class="reserva">
+        <form class="formulario">
+            <div class="titulo">
+                <h2>R<span>ESERVA</span></h2>
+            </div>
+            <label>
+                Fecha:
+                <input type="date" name="fecha" required>
+            </label>
+            <label>
+                Horario:
+                <input type="time" name="horario" required>
+            </label>
+            <label>
+                Número de personas:
+                <input type="number" name="cantidad" placeholder="Escriba la cantidad de personas" required>
+            </label>
+            <label>
+                <label>
+                    Tipo de evento:
+                    <input type="text" name="evento" placeholder="Escriba aquí el tipo de evento" required>
+                </label>
+                <label>
+                Nombre:
+                <input type="text" name="nombre" placeholder="Escriba su nombre" required>
+            </label>
+            <label>
+                Apellido:
+                <input type="text" name="apellido" placeholder="Escriba su apellido" required>
+            </label>
+            <label>
+                E-mail:
+                <input type="email" name="email" placeholder="Escriba su email" required>
+            </label>
+            <label>
+                Celular:
+                <input type="tel" name="cel" placeholder="Escriba su celular" required>
+            </label>
+            <label>
+                Mensaje:
+                <textarea name="mensaje" placeholder="Escriba un mensaje"></textarea>
+            </label>
+            <input type="submit" class="boton" value="Realizar reserva">
+        </form>
+    </main>
+
+    <footer>
+        <div class="pie">
+            <p>Copyright La Parrilla del Abuelo - 2023.Todos los derechos reservados.</p>
+        </div>
+        <div class="redes">
+            <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a>
+            <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://es-la.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i></a>
+            <a href="https://twitter.com/?lang=es"><i class="fa-brands fa-twitter"></i></a>
+        </div>
+    </footer>
     
 </body>
 </html>
