Reemplazando el lorem

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Somos una parrilla familiar que hace más de 20 años se dedica a hacer los asados más ricos para que difrutes con quien quieras">
+    <meta name="keywords" content="parrilla, asado, carne, vacio, tira de asado, pollo, chorizo, morcilla, achuras, vino, postres, almuerzo, cena, catering, cumpleaños, casamientos">
     <link rel="shortcut icon" href="./assets/img/logo1.png" type="image/x-icon">
     <title>La Parrilla del Abuelo</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -49,7 +51,10 @@
             <div class="tarjeta1">
                 <div class="tarjeta1-nosotros" data-aos="fade-right" data-aos-duration="2000">
                     <h2>Nuestra Historia</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem consequatur quisquam, pariatur sapiente iste dolorem, reprehenderit tempore, nihil dolores nemo harum quibusdam unde repellendus maxime aperiam accusamus laborum natus! Nesciunt. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia et tempore error neque. Explicabo odio consequatur at eius non sequi asperiores maiores nesciunt nobis fuga.</p>
+                    <p>Somos una parrilla familiar ubicada en pleno centro de la Ciudad de Buenos Aires, en la calle Carlos Pellegrini N° 551.</p>
+                    <p>Hace más de 20 años que nos dedicamos al rubro del asado, compartiendo todo tipo de festejos y formando parte de sus historias, como ustedes de la nuestra.</p>
+                    <p>Es un lugar para reencontrarse y disfrutar de buena compañía... El abuelo te recibe poniendo toda la carne al asador.</p>
+                    <p>¡Te esperamos!</p>
                 </div>
                 <div data-aos="zoom-in-left" data-aos-duration="2000">
                     <img src="./assets/img/nuestra-historia.jpg" alt="Nosotros">
@@ -58,7 +63,9 @@
             <div class="tarjeta1">
                 <div class="tarjeta1-nosotros" data-aos="fade-right" data-aos-duration="2000">
                     <h2>Nuestra Carne</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem consequatur quisquam, pariatur sapiente iste dolorem, reprehenderit tempore, nihil dolores nemo harum quibusdam unde repellendus maxime aperiam accusamus laborum natus! Nesciunt. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia et tempore error neque. Explicabo odio consequatur at eius non sequi asperiores maiores nesciunt nobis fuga.</p>
+                    <p>Proviene de nuestro campo ubicado en Rivera, Provincia de Buenos Aires, corazón de la Pampa Húmeda.</p>
+                    <p>Producimos Angus de 500kg, a través de una crianza no intensiva a lo largo de 3 años, respetando el proceso de crecimiento y con una alimentación a base de pastura natural.</p>
+                    <p>Los cortes se maduran por 20 días para que adquieran un sabor único, dando como resultado una nueva interpretación de la clásica parrilla argentina.</p>
                 </div>
                 <div data-aos="zoom-in-left" data-aos-duration="2000">
                     <img src="./assets/img/nuestra-carne.jpg" alt="NuestraCarne">
@@ -67,8 +74,9 @@
             <div class="tarjeta1">
                 <div class="tarjeta1-nosotros" data-aos="fade-right" data-aos-duration="2000">
                     <h2>Testimonios</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro ullam, libero minima natus veritatis dolor ut alias quidem. Unde, eos?</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti suscipit voluptates, a voluptate quisquam distinctio quibusdam deleniti dolorem pariatur veniam cumque minima perspiciatis commodi tempora dolores doloribus quod? Quisquam, pariatur?</p>
+                    <p>"Excelente. Lindo lugar. Pedimos un mix de carne para 2 super abundante. La carne excelente, tierna a punto. Y pedimos postre también, super abundante" - Federico Montes</p>
+                    <p>"Todo es excelente. No solo la comida es riquísima, sino la gente y la atención de 10" - Paula Gafos</p>
+                    <p>"La comida muy buena y barata. Excelente atención de parte de los mozos" - Juani Sabatini</p>
                 </div>
                 <div data-aos="zoom-in-left" data-aos-duration="2000">
                     <img class="imagen3" src="./assets/img/testimonios.jpg" alt="Testimonios">
