--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Contamos con el mejor catering a la parrilla para que festejes tu cumpleaños, casamiento, etc.">
+    <meta name="keywords" content="parrilla, asado, carne, vacio, tira de asado, pollo, chorizo, morcilla, achuras, vino, postres, almuerzo, cena, catering, cumpleaños, casamientos">
     <link rel="shortcut icon" href="../assets/img/logo1.png" type="image/x-icon">
-    <title>El menú de la parrilla</title>
+    <title>Eventos / La Parrilla del Abuelo</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" href="../assets/css/style.css">
 </head>
@@ -49,7 +51,9 @@
             <div class="card">
                 <div class="texto">
                     <h2>Cumpleaños</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis culpa fugiat cumque, numquam aliquam, qui possimus omnis delectus inventore sunt, doloremque quia totam hic officia ducimus repellendus dicta! Laborum, veritatis?</p>
+                    <p>Si tenes pensado festejar tu cumpleaños y no queres moverte de casa, ofrecemos un servicio de catering de los más variado, para que pases un excelente día y no tengas que preocuparte por nada.</p>
+                    <p>Nosotros nos encargamos de llevar las parrillas, la carne y el personal adecuado.</p>
+                    <p>Nos encanta formar parte de tus momentos.</p>
                 </div>
                 <div class="imagen">
                     <img src="../assets/img/cumpleaños.jpg" alt="cumpleaños">
@@ -58,16 +62,20 @@
             <div class="card">
                 <div class="texto">
                     <h2>Casamientos</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis culpa fugiat cumque, numquam aliquam, qui possimus omnis delectus inventore sunt, doloremque quia totam hic officia ducimus repellendus dicta! Laborum, veritatis?</p>
+                    <p>¿Tenes pensado hacer una fiesta de casamiento bien Argentina?</p>
+                    <p>Tenemos la solución perfecta. La Parrilla del Abuelo cuenta con un servicio de catering de lo más profesional para que puedas disfrutar con tus seres queridos de ese momento único.</p>
+                    <p>Contamos con un menú informal de varias islas con distintos cortes de carne y un menú formal para disfrutar de un excelente asado al plato.</p>
                 </div>
                 <div class="imagen">
-                    <img src="../assets/img/catering-casamiento.jpg" alt="catering-casamiento">
+                    <img src="../assets/img/catering-casamiento.jpg" alt="catering para casamiento">
                 </div>
             </div>
             <div class="card">
                 <div class="texto">
                     <h2>Eventos corporativos</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis culpa fugiat cumque, numquam aliquam, qui possimus omnis delectus inventore sunt, doloremque quia totam hic officia ducimus repellendus dicta! Laborum, veritatis?</p>
+                    <p>Despedidas de fin de año, reunión de negocios, eventos empresariales, etc.</p>
+                    <P>Ofrecemos un catering especial para este tipo de eventos, con bandejeo de picada y distintos cortes de carne.</P>
+                    <p>Contamos con un personal de primera calidad para que los atiendan de la mejor manera, así ustedes se pueden enfocar en la reunión, sin preocuparse por nada.</p>
                 </div>
                 <div class="imagen">
                     <img src="../assets/img/evento-corporativo.jpg" alt="evento-corporativo">
