--- a/pages/reserva.html
+++ b/pages/reserva.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Vení a nuestra parrilla para disfrutar del mejor asado argentino">
+    <meta name="keywords" content="parrilla, asado, carne, vacio, tira de asado, pollo, chorizo, morcilla, achuras, vino, postres, almuerzo, cena, catering, cumpleaños, casamientos, menú, carta">
     <link rel="shortcut icon" href="../assets/img/logo1.png" type="image/x-icon">
-    <title>El menú de la parrilla</title>
+    <title>Reserva / La Parrilla del Abuelo</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" href="../assets/css/style.css">
 </head>
